src/style.css
body {
  margin: 0;
}

.navbar {
  display: flex;
}

.navbar-list {
  list-style-type: none;
  margin-left: 100px;
}

.navbar a {
  text-decoration: none;
  color: black;
}

.logo {
  width: 100px;
  height: 100px;
}

#movie-list {
  display: flex;
}

.movie-list-container {
  margin: 25px;
}

/* ---------- Popup ----------- */
.popup-filter {
  z-index: 9;
  width: 100%;
  height: 100%;
  background-color: grey;
  position: absolute;
}

/*
#popup {
  position: relative;
  z-index: 10;
}
*/

.popup {
  position: fixed;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.3);
  width: 100%;
  height: 100vh;
  z-index: 19;
}

.popup-container {
  border: 2px solid black;
  margin: 15px;
  padding: 25px;
  display: flex;
  justify-content: center;
  background-color: white;
}

.photo-close {
  display: flex;
}

.photo-close img {
  width: 400px;
  height: auto;
}

.photo-close span {
  padding-left: 15px;
  padding-bottom: 15px;
}

.inner-content h2,
.inner-content h3 {
  text-align: center;
}

.movie-description-1,
.movie-description-2 {
  display: flex;
  justify-content: space-between;
}

.comment-create {
  display: flex;
  flex-direction: column;
}

input[name="username"] {
  margin-bottom: 20px;
  width: 50%;
}

.btn-add-comment {
  margin-top: 20px;
  align-self: flex-end;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 80px;
  background-color: aqua;
  display: flex;
  justify-content: center;
}

footer p {
  text-align: center;
  margin: 30px;
}

